--- a/packages/web-app/src/components/cards/post-summary/styles.scss
+++ b/packages/web-app/src/components/cards/post-summary/styles.scss
@@ -2,11 +2,10 @@
   display: grid;
   row-gap: 0.75em;
   grid-template-rows: repeat(3, auto);
-  grid-template-columns: 2fr 1fr;
   padding-top: 0.5em;
   padding-bottom: 2em;
   border-bottom: 1px solid rgb(238, 238, 238);
-  font-family: Helvetica, sans-serif;
+  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: grey;
 
   .header {
@@ -29,7 +28,7 @@
     }
 
     .text {
-      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-family: source-serif-pro, Georgia, Cambria, "Times New Roman", Times, serif;
     }
   }
   .col-span {
